--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
 .board {
-  background-color: grey;
+  background-color: #bc3c3c;
+  color: white;
+  margin: 20px;
+  display: inline-block;
+  padding: 10px 20px;
+}
+
+.lists {
+  display: block;
+  list-style: none;
+  margin: 20px;
+}
+
+.list {
+  padding: 10px;
+  margin-bottom: .5em;
+  border: .01px solid grey;
+  width: 25%;
+  height: 205px;
+  overflow:scroll;
 }
